fix: attractive scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,30 @@ body,
   height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f3f3f3; /* Track background */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #8d8f91, #cacbcc); /* Thumb gradient */
+  border-radius: 10px;
+  border: 3px solid #f3f3f3; /* Border for contrast */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(45deg, #575d63, #a9abad); /* Hover effect */
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent; /* For the corner where both scrollbars meet */
+}
+
 .custom-capitalize {
   text-transform: lowercase;
 }
